--- a/client/src/gcp.css
+++ b/client/src/gcp.css
@@ -13,3 +13,59 @@
   --border-heavy: #9E9E9E;
   --border-xheavy: #757575;
 }
+
+.gcp .btn-secondary:hover {
+  --tw-bg-opacity: 1;
+  border-color: rgba(8, 82, 78, var(--tw-border-opacity));
+  color: rgba(255, 255, 240, var(--tw-text-opacity));
+  background-color: rgba(8, 82, 78, var(--tw-bg-opacity));
+}
+.gcp .btn-neutral {
+  --tw-border-opacity: 1;
+  --tw-bg-opacity: 1;
+  --tw-text-opacity: 1;
+  background-color: transparent;
+  border-color: rgba(66, 66, 66, var(--tw-border-opacity));
+  color: rgba(255, 255, 240, var(--tw-text-opacity));
+}
+.gcp .btn-neutral:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(66, 66, 66, var(--tw-bg-opacity));
+}
+.gcp ::-webkit-scrollbar-thumb {
+  background-color: hsla(0, 0%, 100%, 0.1);
+}
+.gcp .scrollbar-transparent::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+.gcp body,
+.gcp html {
+  --tw-bg-opacity: 1;
+  background-color: rgba(23, 23, 23, var(--tw-bg-opacity));
+}
+.gcp .shadow-stroke:after {
+  --tw-shadow: inset 0 0 0 1px hsla(0, 0%, 100%, 0.3);
+  --tw-shadow-colored: inset 0 0 0 1px var(--tw-shadow-color);
+}
+.gcp .assistant-item:after {
+  --tw-shadow: inset 0 0 0 1px rgba(0,0,0,.25);
+  --tw-shadow-colored: inset 0 0 0 1px var(--tw-shadow-color);
+}
+.gcp .dark\:prose-invert {
+  --tw-prose-body: var(--tw-prose-invert-body);
+  --tw-prose-headings: var(--tw-prose-invert-headings);
+  --tw-prose-lead: var(--tw-prose-invert-lead);
+  --tw-prose-links: var(--tw-prose-invert-links);
+  --tw-prose-bold: var(--tw-prose-invert-bold);
+  --tw-prose-counters: var(--tw-prose-invert-counters);
+  --tw-prose-bullets: var(--tw-prose-invert-bullets);
+  --tw-prose-hr: var(--tw-prose-invert-hr);
+  --tw-prose-quotes: var(--tw-prose-invert-quotes);
+  --tw-prose-quote-borders: var(--tw-prose-invert-quote-borders);
+  --tw-prose-captions: var(--tw-prose-invert-captions);
+  --tw-prose-code: var(--tw-prose-invert-code);
+  --tw-prose-pre-code: var(--tw-prose-invert-pre-code);
+  --tw-prose-pre-bg: var(--tw-prose-invert-pre-bg);
+  --tw-prose-th-borders: var(--tw-prose-invert-th-borders);
+  --tw-prose-td-borders: var(--tw-prose-invert-td-borders);
+}
