--- a/client/src/aws.css
+++ b/client/src/aws.css
@@ -14,11 +14,16 @@
   --border-xheavy: #A0AEC0;
 }
 
+.aws .btn-secondary {
+  color: #FFFFFF;
+  background-color: #FF9900;
+  border-color: #FF9900;
+}
 .aws .btn-secondary:hover {
   --tw-bg-opacity: 1;
-  border-color: rgba(8, 82, 78, var(--tw-border-opacity));
-  color: rgba(255, 255, 240, var(--tw-text-opacity));
-  background-color: rgba(8, 82, 78, var(--tw-bg-opacity));
+  color: #FFFFFF;
+  background-color: rgba(255, 137, 0, var(--tw-bg-opacity));
+  border-color: rgba(255, 137, 0, var(--tw-border-opacity));
 }
 .aws .btn-neutral {
   --tw-border-opacity: 1;
@@ -31,6 +36,7 @@
 .aws .btn-neutral:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(66, 66, 66, var(--tw-bg-opacity));
+  color: #FFFFFF;
 }
 .aws ::-webkit-scrollbar-thumb {
   background-color: hsla(0, 0%, 100%, 0.1);
