--- a/client/src/aws.css
+++ b/client/src/aws.css
@@ -57,20 +57,20 @@
   --tw-shadow-colored: inset 0 0 0 1px var(--tw-shadow-color);
 }
 .aws .dark\:prose-invert {
-  --tw-prose-body: var(--tw-prose-invert-body);
-  --tw-prose-headings: var(--tw-prose-invert-headings);
-  --tw-prose-lead: var(--tw-prose-invert-lead);
-  --tw-prose-links: var(--tw-prose-invert-links);
-  --tw-prose-bold: var(--tw-prose-invert-bold);
-  --tw-prose-counters: var(--tw-prose-invert-counters);
-  --tw-prose-bullets: var(--tw-prose-invert-bullets);
-  --tw-prose-hr: var(--tw-prose-invert-hr);
-  --tw-prose-quotes: var(--tw-prose-invert-quotes);
-  --tw-prose-quote-borders: var(--tw-prose-invert-quote-borders);
-  --tw-prose-captions: var(--tw-prose-invert-captions);
-  --tw-prose-code: var(--tw-prose-invert-code);
-  --tw-prose-pre-code: var(--tw-prose-invert-pre-code);
-  --tw-prose-pre-bg: var(--tw-prose-invert-pre-bg);
-  --tw-prose-th-borders: var(--tw-prose-invert-th-borders);
-  --tw-prose-td-borders: var(--tw-prose-invert-td-borders);
+  --tw-prose-body: var(--tw-prose-body);
+  --tw-prose-headings: var(--tw-prose-headings);
+  --tw-prose-lead: var(--tw-prose-lead);
+  --tw-prose-links: var(--tw-prose-links);
+  --tw-prose-bold: var(--tw-prose-bold);
+  --tw-prose-counters: var(--tw-prose-counters);
+  --tw-prose-bullets: var(--tw-prose-bullets);
+  --tw-prose-hr: var(--tw-prose-hr);
+  --tw-prose-quotes: var(--tw-prose-quotes);
+  --tw-prose-quote-borders: var(--tw-prose-quote-borders);
+  --tw-prose-captions: var(--tw-prose-captions);
+  --tw-prose-code: var(--tw-prose-code);
+  --tw-prose-pre-code: var(--tw-prose-pre-code);
+  --tw-prose-pre-bg: var(--tw-prose-pre-bg);
+  --tw-prose-th-borders: var(--tw-prose-th-borders);
+  --tw-prose-td-borders: var(--tw-prose-td-borders);
 }
